--- a/Student_Home_Style.css
+++ b/Student_Home_Style.css
@@ -169,7 +169,7 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .menu-wrap .menu > div {
     background: var(--overlay-color);
     border-radius: 50%;
@@ -197,11 +197,20 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
+
+  .menu-wrap .menu > div > div > ul > li :hover{
+    background-color: rgba(255, 255, 255, 0.095);
+    padding: 10px;
+    transition : all 0.4s ease-in-out;
+  }
   
   .menu-wrap .menu > div > div > ul > li > a {
     color: inherit;
     text-decoration: none;
     transition: color 0.4s ease;
   }
+
+
+
   
   
