--- a/grade_track.css
+++ b/grade_track.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #e4e4e4;
+  background-color: #6d44b8;
   width: 100vw;
   height: 100vh;
   display: flex;
