--- a/Broadcast.css
+++ b/Broadcast.css
@@ -1,9 +1,12 @@
+/* CORE STYLES */
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(24, 39, 51 , 0.85);
+    --overlay-color: rgba(24, 39, 51, 0.85);
     --menu-speed: 0.75s;
   }
   
+
+
   * {
     margin: 0;
     padding: 0;
@@ -11,15 +14,27 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     line-height: 1.4;
+    color: white;
+    background-color: #4a92a8;
   }
   
+  #heading{
+    font-size: 40px;
+  }
+
   .container {
-    max-width: 960px;
-    margin: auto;
+    width: 60%;
+    margin-left: 20%;
     overflow: hidden;
     padding: 0 3rem;
+  }
+  
+  .title {
+    text-align: center;
+    font-size: 40px;
+    margin: 2rem 0;
   }
   
   .showcase {
@@ -28,7 +43,6 @@
     height: 100vh;
     position: relative;
   }
-  
   
   .showcase .showcase-inner {
     display: flex;
@@ -53,9 +67,10 @@
     background: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
     transition: opacity 1s ease-in-out;
     text-decoration: none;
+    margin: 1rem;
+    font-size: 1.25rem;
   }
   
   .btn:hover {
@@ -111,7 +126,7 @@
   /* Hamburger Lines - Top & Bottom */
   .menu-wrap .hamburger > div::before,
   .menu-wrap .hamburger > div::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: 1;
     top: -10px;
@@ -154,7 +169,7 @@
   
   .menu-wrap .toggler:checked ~ .menu > div > div {
     opacity: 1;
-    transition:  opacity 0.4s ease 0.4s;
+    transition: opacity 0.4s ease 0.4s;
   }
   
   .menu-wrap .menu {
@@ -169,7 +184,7 @@
     align-items: center;
     justify-content: center;
   }
-
+  
   .menu-wrap .menu > div {
     background: var(--overlay-color);
     border-radius: 50%;
@@ -197,12 +212,6 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
-
-  .menu-wrap .menu > div > div > ul > li :hover{
-    background-color: rgba(255, 255, 255, 0.095);
-    padding: 10px;
-    transition : all 0.4s ease-in-out;
-  }
   
   .menu-wrap .menu > div > div > ul > li > a {
     color: inherit;
@@ -210,7 +219,19 @@
     transition: color 0.4s ease;
   }
 
-
-
+ 
   
+  table,
+  th,
+  td {
+    padding: 4px;
+    font-size: 1.25rem;
+    border: 2px solid rgb(255, 255, 255);
+    border-collapse: collapse;
+    text-align: center;
+  }
+  
+  table {
+    width: 100%;
+  }
   
