--- a/select_subj.css
+++ b/select_subj.css
@@ -1,7 +1,6 @@
-/* CORE STYLES */
 :root {
   --primary-color: rgba(13, 110, 139, 0.75);
-  --overlay-color: rgba(24, 39, 51, 0.85);
+  --overlay-color: rgba(24, 39, 51 , 0.85);
   --menu-speed: 0.75s;
 }
 
@@ -12,48 +11,45 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.4;
-  color: white;
-  background-color: #4a92a8;
+  background-color: rgba(13, 110, 139, 0.75);
 }
 
 .container {
-  width: 60%;
-  margin-left: 20%;
-  overflow: hidden;
-  padding: 0 3rem;
+  margin: auto;
 }
 
-.title {
-  text-align: center;
-  font-size: 2.5rem;
-  margin: 2rem 0;
+.selector{
+  margin: auto;
+  margin-top: 10vh;
+  height: 50px;
+  width: 500px;
 }
 
-.showcase {
-  background: var(--primary-color);
+#labelh{
   color: #fff;
-  height: 100vh;
-  position: relative;
+  background-color: #ff000000;
+  font-size: 25px;
 }
 
-.showcase .showcase-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 100%;
+select{
+  font-size: 20px;
 }
 
-.showcase h1 {
-  font-size: 4rem;
+.container a{
+  color: white;
 }
 
-.showcase p {
-  font-size: 1.3rem;
+.selector button{
+  flex-direction: row;
+  font-size: 15px;
+  background-color: #ffffff00;
+  color: #fff;
+  border-color: white;
+  padding: 5px;
 }
+
 
 .btn {
   display: inline-block;
@@ -61,10 +57,9 @@ body {
   background: var(--primary-color);
   color: #fff;
   padding: 0.75rem 1.5rem;
+  margin-top: 1rem;
   transition: opacity 1s ease-in-out;
   text-decoration: none;
-  margin: 1rem;
-  font-size: 1.25rem;
 }
 
 .btn:hover {
@@ -120,7 +115,7 @@ body {
 /* Hamburger Lines - Top & Bottom */
 .menu-wrap .hamburger > div::before,
 .menu-wrap .hamburger > div::after {
-  content: "";
+  content: '';
   position: absolute;
   z-index: 1;
   top: -10px;
@@ -163,7 +158,7 @@ body {
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition: opacity 0.4s ease 0.4s;
+  transition:  opacity 0.4s ease 0.4s;
 }
 
 .menu-wrap .menu {
@@ -207,23 +202,18 @@ body {
   padding: 1rem;
 }
 
+.menu-wrap .menu > div > div > ul > li :hover{
+  background-color: rgba(255, 255, 255, 0.095);
+  padding: 10px;
+  transition : all 0.4s ease-in-out;
+}
+
 .menu-wrap .menu > div > div > ul > li > a {
   color: inherit;
   text-decoration: none;
   transition: color 0.4s ease;
 }
 
-table,
-th,
-td {
-  padding: 4px;
-  font-size: 1.5rem;
-  border: 2px solid rgb(255, 255, 255);
-  
-  border-collapse: collapse;
-  text-align: center;
-}
 
-table {
-  width: 100%;
-}
+
+
