--- a/public/css/Faculty_Home_Style.css
+++ b/public/css/Faculty_Home_Style.css
@@ -1,7 +1,7 @@
 /* CORE STYLES */
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(24, 39, 51, 0.85);
+    --overlay-color: rgba(24, 39, 51 , 0.85);
     --menu-speed: 0.75s;
   }
   
@@ -12,23 +12,15 @@
   }
   
   body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.4;
-    color: white;
-    background-color: #4a92a8;
   }
   
   .container {
-    width: 60%;
-    margin-left: 20%;
+    max-width: 960px;
+    margin: auto;
     overflow: hidden;
     padding: 0 3rem;
-  }
-  
-  .title {
-    text-align: center;
-    font-size: 2.5rem;
-    margin: 2rem 0;
   }
   
   .showcase {
@@ -37,6 +29,7 @@
     height: 100vh;
     position: relative;
   }
+  
   
   .showcase .showcase-inner {
     display: flex;
@@ -61,10 +54,9 @@
     background: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
+    margin-top: 1rem;
     transition: opacity 1s ease-in-out;
     text-decoration: none;
-    margin: 1rem;
-    font-size: 1.25rem;
   }
   
   .btn:hover {
@@ -120,7 +112,7 @@
   /* Hamburger Lines - Top & Bottom */
   .menu-wrap .hamburger > div::before,
   .menu-wrap .hamburger > div::after {
-    content: "";
+    content: '';
     position: absolute;
     z-index: 1;
     top: -10px;
@@ -163,7 +155,7 @@
   
   .menu-wrap .toggler:checked ~ .menu > div > div {
     opacity: 1;
-    transition: opacity 0.4s ease 0.4s;
+    transition:  opacity 0.4s ease 0.4s;
   }
   
   .menu-wrap .menu {
@@ -213,17 +205,4 @@
     transition: color 0.4s ease;
   }
   
-  table,
-  th,
-  td {
-    padding: 4px;
-    font-size: 1.5rem;
-    border: 2px solid rgb(255, 255, 255);
-    
-    border-collapse: collapse;
-    text-align: center;
-  }
   
-  table {
-    width: 100%;
-  }
