--- a/public/css/Student_Login_Style.css
+++ b/public/css/Student_Login_Style.css
@@ -6,7 +6,7 @@ body{
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background:  rgba(13, 110, 139, 0.75);
+	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 .main{
 	width: 350px;
@@ -16,6 +16,18 @@ body{
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
+}
+#chk{
+	display: none;
+}
+.signup{
+	
+
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
 }
 label{
 	color: #fff;
@@ -31,7 +43,7 @@ label{
 input{
 	width: 60%;
 	height: 20px;
-	background: #ffffff;
+	background: #e0dede;
 	justify-content: center;
 	display: flex;
 	margin: 20px auto;
@@ -46,8 +58,8 @@ button{
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
-	color: rgba(13, 110, 139, 0.75);
-	background: #ffffff;
+	color: #fff;
+	background: #573b8a;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -56,4 +68,26 @@ button{
 	border-radius: 5px;
 	transition: .2s ease-in;
 	cursor: pointer;
+}
+button:hover{
+	background: #6d44b8;
+}
+.login{
+	position: relative;
+	width:100%;
+	height: 100%;
+}
+.signup label{
+	color: #573b8a;
+	transform: scale(.6);
+}
+
+#chk:checked ~ .signup{
+	transform: translateY(-515px);
+}
+#chk:checked ~ .signup label{
+	transform: scale(1);	
+}
+#chk:checked ~ .login label{
+	transform: scale(.6);
 }
