--- a/FacultyDetails.css
+++ b/FacultyDetails.css
@@ -1,6 +1,7 @@
+/* CORE STYLES */
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(24, 39, 51 , 0.85);
+    --overlay-color: rgba(24, 39, 51, 0.85);
     --menu-speed: 0.75s;
   }
   
@@ -11,31 +12,37 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     line-height: 1.4;
+    color: white;
+    background-color: #4a92a8;
+
+    --primary-color: rgba(13, 110, 139, 0.75);
+    --overlay-color: rgba(24, 39, 51 , 0.85); 
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+    color: #000;
   }
   
   .container {
-    max-width: 960px;
-    margin: auto;
+    width: 60%;
+    margin-left: 20%;
     overflow: hidden;
     padding: 0 3rem;
   }
   
-  .showcase { 
+  .title {
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 2rem 0;
+  }
+  
+  .showcase {
     background: var(--primary-color);
     color: #fff;
     height: 100vh;
     position: relative;
   }
-
-
-
-.btn p{
-    font-size:20px ;
-    font-weight: bold;
-}
-  
   
   .showcase .showcase-inner {
     display: flex;
@@ -60,9 +67,10 @@
     background: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
     transition: opacity 1s ease-in-out;
     text-decoration: none;
+    margin: 1rem;
+    font-size: 1.25rem;
   }
   
   .btn:hover {
@@ -118,7 +126,7 @@
   /* Hamburger Lines - Top & Bottom */
   .menu-wrap .hamburger > div::before,
   .menu-wrap .hamburger > div::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: 1;
     top: -10px;
@@ -161,7 +169,7 @@
   
   .menu-wrap .toggler:checked ~ .menu > div > div {
     opacity: 1;
-    transition:  opacity 0.4s ease 0.4s;
+    transition: opacity 0.4s ease 0.4s;
   }
   
   .menu-wrap .menu {
@@ -176,7 +184,7 @@
     align-items: center;
     justify-content: center;
   }
-
+  
   .menu-wrap .menu > div {
     background: var(--overlay-color);
     border-radius: 50%;
@@ -204,20 +212,83 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
-
-  .menu-wrap .menu > div > div > ul > li :hover{
-    background-color: rgba(255, 255, 255, 0.095);
-    padding: 10px;
-    transition : all 0.4s ease-in-out;
-  }
   
   .menu-wrap .menu > div > div > ul > li > a {
     color: inherit;
     text-decoration: none;
     transition: color 0.4s ease;
   }
-
-
-
   
+  table,
+  th,
+  td {
+    font-size: 1.75rem;
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+  }
   
+  table {
+    width: 100%;
+  }
+  
+
+
+  button{
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #573b8a;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 20px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+
+/* #profile-container {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    align-items: end;
+} */
+
+.student-profile .card {
+    border-radius: 10px;
+}
+.student-profile .card .card-header .profile_img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 10px auto;
+    border: 10px solid #ccc;
+    border-radius: 50%;
+}
+
+.student-profile .card h3 {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.student-profile .card p {
+    font-size: 16px;
+    color: #000;
+}
+
+.student-profile .table th,
+.student-profile .table td {
+    font-size: 14px;
+    padding: 5px 10px;
+    color: #000;
+}
