--- a/Faculty_Info.css
+++ b/Faculty_Info.css
@@ -1,6 +1,7 @@
+/* CORE STYLES */
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(24, 39, 51 , 0.85);
+    --overlay-color: rgba(24, 39, 51, 0.85);
     --menu-speed: 0.75s;
   }
   
@@ -11,31 +12,31 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     line-height: 1.4;
+    color: white;
+    background-color: #4a92a8;
   }
   
   .container {
-    max-width: 960px;
-    margin: auto;
+    width: 60%;
+    margin-left: 20%;
     overflow: hidden;
     padding: 0 3rem;
   }
   
-  .showcase { 
+  .title {
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 2rem 0;
+  }
+  
+  .showcase {
     background: var(--primary-color);
     color: #fff;
     height: 100vh;
     position: relative;
   }
-
-
-
-.btn p{
-    font-size:20px ;
-    font-weight: bold;
-}
-  
   
   .showcase .showcase-inner {
     display: flex;
@@ -60,9 +61,10 @@
     background: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
     transition: opacity 1s ease-in-out;
     text-decoration: none;
+    margin: 1rem;
+    font-size: 1.25rem;
   }
   
   .btn:hover {
@@ -118,7 +120,7 @@
   /* Hamburger Lines - Top & Bottom */
   .menu-wrap .hamburger > div::before,
   .menu-wrap .hamburger > div::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: 1;
     top: -10px;
@@ -161,7 +163,7 @@
   
   .menu-wrap .toggler:checked ~ .menu > div > div {
     opacity: 1;
-    transition:  opacity 0.4s ease 0.4s;
+    transition: opacity 0.4s ease 0.4s;
   }
   
   .menu-wrap .menu {
@@ -176,7 +178,7 @@
     align-items: center;
     justify-content: center;
   }
-
+  
   .menu-wrap .menu > div {
     background: var(--overlay-color);
     border-radius: 50%;
@@ -204,20 +206,32 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
-
-  .menu-wrap .menu > div > div > ul > li :hover{
-    background-color: rgba(255, 255, 255, 0.095);
-    padding: 10px;
-    transition : all 0.4s ease-in-out;
-  }
   
   .menu-wrap .menu > div > div > ul > li > a {
     color: inherit;
     text-decoration: none;
     transition: color 0.4s ease;
   }
-
-
-
   
+  table,
+  th,
+  td {
+    padding: 4px;
+    font-size: 1.5rem;
+    border: 2px solid rgb(255, 255, 255);
+    
+    border-collapse: collapse;
+    text-align: center;
+  }
   
+  table {
+    width: 100%;
+  }
+  
+  button{
+    background: #00000000;
+    border:0px;
+    color: white;
+    font-size: 25px;
+    text-decoration: underline;
+  }
