--- a/receipt.css
+++ b/receipt.css
@@ -217,11 +217,19 @@
   th,
   td {
 	font-size: 1.75rem;
-	border: 1px solid black;
+	border: 2px solid rgb(255, 255, 255);
 	border-collapse: collapse;
 	text-align: center;
   }
   
+  a{
+	color: white;
+  }
+
+  a:hover{
+	color: rgb(22, 69, 255);
+  }
+
   table {
 	width: 100%;
   }
