--- a/Faculty_Login_Style.css
+++ b/Faculty_Login_Style.css
@@ -1,4 +1,4 @@
-body{
+body {
 	margin: 0;
 	padding: 0;
 	display: flex;
@@ -6,9 +6,10 @@ body{
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background:  rgba(13, 110, 139, 0.75);
+	background: rgba(13, 110, 139, 0.75);
 }
-.main{
+
+.main {
 	width: 350px;
 	height: 500px;
 	background: red;
@@ -17,7 +18,8 @@ body{
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
 }
-label{
+
+label {
 	color: #fff;
 	font-size: 2.3em;
 	justify-content: center;
@@ -28,7 +30,8 @@ label{
 	transition: .5s ease-in-out;
 	margin-bottom: -10px;
 }
-input{
+
+input {
 	width: 60%;
 	height: 20px;
 	background: #ffffff;
@@ -40,7 +43,8 @@ input{
 	outline: none;
 	border-radius: 5px;
 }
-button{
+
+button {
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
@@ -56,4 +60,13 @@ button{
 	border-radius: 5px;
 	transition: .2s ease-in;
 	cursor: pointer;
+}
+
+.home-btn {
+	margin-top: 2rem;
+}
+
+a {
+	text-decoration: none;
+	color: rgba(13, 110, 139, 0.75);
 }
