--- a/views/Student_Home.ejs
+++ b/views/Student_Home.ejs
@@ -16,7 +16,7 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="#">Student Details</a></li>
+							<li><a href="/Student_Info">Student Details</a></li>
 							<li><a href="#">Course Reports</a></li>
 							<li><a href="#">Grade Tracking</a></li>
 							<li><a href="#">Transcript</a></li>
@@ -37,7 +37,7 @@
 			</div>
 		</header>
 		
-		<form action="/logoutStudent?_method=DELETE" method="post">
+		<form action="/logoutStudent" method="post">
 			<button type="submit">Log Out</button>
 		</form>
 	</body>
