--- a/views/Faculty_Home.ejs
+++ b/views/Faculty_Home.ejs
@@ -17,9 +17,9 @@
 					<div>
 						<ul>
 							<li><a href="/Faculty_Info">Faculty Details</a></li>
-							<li><a href="#">Course Reports</a></li>
-							<li><a href="#">Maintain course info</a></li>
-							<li><a href="#">Broadcasts</a></li>
+							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
+							<li><a href="/Faculty_Resources">Maintain course info</a></li>
+							<li><a href="/Admin_BroadCats">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
