--- a/views/Faculty_Info.ejs
+++ b/views/Faculty_Info.ejs
@@ -20,11 +20,11 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="FacultyDetails.html">Faculty Details</a></li>
-							<li><a href="Faculty_Course_Report.html">Course Reports</a></li>
-							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
-							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
+							<li><a href="/Faculty_Info">Faculty Details</a></li>
+							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
+							<li><a href="/Faculty_Resources">Maintain course info</a></li>
+							<li><a href="/Admin_BroadCats">Broadcasts</a></li>
+							<li><a href="/Main_Lander">Log Out</a></li>
 						</ul>
 					</div>
 				</div>
