--- a/views/Faculty_Resources.ejs
+++ b/views/Faculty_Resources.ejs
@@ -5,7 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="Faculty_Resources.css" />
+		<link rel="stylesheet" href="/css/Faculty_Resources.css" />
 		<title>Faculty Resources</title>
 	</head>
 	<body>
@@ -16,11 +16,11 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="/Faculty_Info">Faculty Details</a></li>
-							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
-							<li><a href="/Admin_BroadCasts">Broadcasts</a></li>
-							<li><a href="/Main_Lander">Log Out</a></li>
+							<li><a href="FacultyDetails.html">Faculty Details</a></li>
+							<li><a href="Select_Subject_Faculty.html">Course Reports</a></li>
+							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
+							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
+							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
 				</div>
