--- a/views/Student_Home.ejs
+++ b/views/Student_Home.ejs
@@ -17,14 +17,14 @@
 					<div>
 						<ul>
 							<li><a href="/Student_Info">Student Details</a></li>
-							<li><a href="#">Course Reports</a></li>
-							<li><a href="#">Grade Tracking</a></li>
-							<li><a href="#">Transcript</a></li>
-							<li><a href="#">Attendence</a></li>
-							<li><a href="#">Fees Receipts</a></li>
-							<li><a href="#">Feedbacks</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Broadcasts</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
+							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
+							<li><a href="/Student_Feedback">Feedbacks</a></li>
+							<li><a href="/Student_Resources">Resources</a></li>
+							<li><a href="/Student_BroadCasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
