--- a/views/Student_Info.ejs
+++ b/views/Student_Info.ejs
@@ -20,7 +20,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="personal_info.html">Personal Details</a></li>
+              <li><a href="/Student_Info.html">Personal Details</a></li>
 							<li><a href="Student_Report.html">Course Reports</a></li>
 							<li><a href="grade_tracking.html">Grade Tracking</a></li>
 							<li><a href="Transcript.html">Transcript</a></li>
@@ -29,7 +29,7 @@
 							<li><a href="Feedback.html">Feedbacks</a></li>
 							<li><a href="select_subj.html">Resources</a></li>
 							<li><a href="Broadcast.html">Broadcasts</a></li>
-		    <li><a href="MainLander.html">Log Out</a></li>
+		    <li><a href="/MainLander">Log Out</a></li>
             </ul>
           </div>
         </div>
