--- a/views/Admin_Feedback_Details.ejs
+++ b/views/Admin_Feedback_Details.ejs
@@ -5,8 +5,8 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/Admin_Faculty_Info.css" />
-		<title>Faculty Info</title>
+		<link rel="stylesheet" href="/css/Admin_Feedback_Details.css" />
+		<title>Admin Home</title>
 	</head>
 	<body>
 		<div class="menu-wrap">
@@ -19,6 +19,7 @@
 							<li><a href="select_batch.html">Student Information</a></li>
 							<li><a href="Faculty_Info.html">Faculty Information</a></li>
 							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
+							<li><a href="Feedback_Subject_Select_Admin.html">Feedbacks</a></li>
 							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
@@ -26,18 +27,20 @@
 			</div>
 		</div>
 
-        <div class="container">
-            <div class="title">Faculty Information</div>
+		<div class="container">
+            <div class="title">Feedback</div>
             <div class="course-table">
+				
               <table>
-                <% faculty.forEach(function(faculty) { %>
-                  <tr></tr>
-                  <td><%= faculty.name %></td>
-                  <td><%= faculty.faculty_ID%>  </td>
-                  <% }) %>
+				<th> <%=course.name%> </th>
+                <% for(var i=0;i<StuSub.length;i++) {%>
+            
+                  <tr>
+                    <td> <%= StuSub[i].feedback %></td>
+                  </tr>
+                <% } %>
               </table>
             </div>
           </div>
-
 	</body>
 </html>
