--- a/views/Admin_Home.ejs
+++ b/views/Admin_Home.ejs
@@ -19,7 +19,8 @@
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
 							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
 							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
-							<li><a href="/">Log Out</a></li>
+							<li><a href="/Admin_Feedback">Feedback</a></li>
+							
 						</ul>
 					</div>
 				</div>
