--- a/views/Admin_Student_Info.ejs
+++ b/views/Admin_Student_Info.ejs
@@ -17,8 +17,8 @@
 					<div>
 						<ul>
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
-							<li><a href="/Faculty_Info">Faculty Information</a></li>
-							<li><a href="/Admin_BroadCasts">Broadcasts</a></li>
+							<li><a href="Faculty_Info.html">Faculty Information</a></li>
+							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
 							<li><a href="/MainLander">Log Out</a></li>
 						</ul>
 					</div>
@@ -27,12 +27,10 @@
 		</div>
 
         <div class="container">
-            <div class="title">Batch</div>
+            <div class="title">Student-Info</div>
             <div class="course-table">
               <table>
                 <% student.forEach(function(student) { %>
-                <th>Name</th>
-                <th>ID</th>
                 <tr></tr>
                 <td><%= student.name %></td>
                 <td><%= student.student_ID%>  </td>
