Fixed Faculty Schema

--- a/views/Faculty_Info.ejs
+++ b/views/Faculty_Info.ejs
@@ -76,9 +76,9 @@
 										</td>
 									</tr>
 									<tr>
-										<% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
+										
 										<td>Date of Joining</td>
-                    					<td><%= faculty.date_Of_Joining.toLocaleDateString("en-US", options) %></td>
+                    					<td><%= faculty.date_Of_Joining %></td>
 									</tr>
 								</table>
 							</div>
