--- a/views/Main_Lander.ejs
+++ b/views/Main_Lander.ejs
@@ -66,7 +66,7 @@
         </div>
         <div class="container">
             <div class="btn">
-                <a href="/admin_login"><button>Admin Login</button></a>
+                <a href="/Admin_Login"><button>Admin Login</button></a>
             </div>
             <div class="btn">
                 <a href="/Student_Home_Login"><button>Student Login</button></a>
