Routing of all pages

--- a/views/Admin_Student_Info.ejs
+++ b/views/Admin_Student_Info.ejs
@@ -16,10 +16,11 @@
 				<div>
 					<div>
 						<ul>
+							<li><a href="/Admin_Home">Home</a></li>
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
-							<li><a href="Faculty_Info.html">Faculty Information</a></li>
-							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
-							<li><a href="/MainLander">Log Out</a></li>
+							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
+							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
+							
 						</ul>
 					</div>
 				</div>
