--- a/views/Faculty_Home.ejs
+++ b/views/Faculty_Home.ejs
@@ -16,10 +16,11 @@
 				<div>
 					<div>
 						<ul>
+							<li><a href="/Faculty_Home">Home</a></li>
 							<li><a href="/Faculty_Info">Faculty Details</a></li>
 							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
 							<li><a href="/Faculty_Resources">Maintain course info</a></li>
-							<li><a href="/Faculty_BroadCasts">Broadcasts</a></li>
+							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
