--- a/views/Student_Home.ejs
+++ b/views/Student_Home.ejs
@@ -16,6 +16,7 @@
 				<div>
 					<div>
 						<ul>
+							<li><a href="/Student_Home">Home</a></li>
 							<li><a href="/Student_Info">Student Details</a></li>
 							<li><a href="/Student_Sub_Info">Course Reports</a></li>
 							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
@@ -24,7 +25,7 @@
 							
 							<li><a href="/Student_Feedback">Feedbacks</a></li>
 							<li><a href="/Student_Resources">Resources</a></li>
-							<li><a href="/Student_BroadCasts">Broadcasts</a></li>
+							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
