--- a/views/Admin_Faculty_Info.ejs
+++ b/views/Admin_Faculty_Info.ejs
@@ -16,10 +16,10 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="select_batch.html">Student Information</a></li>
-							<li><a href="Faculty_Info.html">Faculty Information</a></li>
-							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
+							<li><a href="/Admin_Home">Home</a></li>
+							<li><a href="/Admin_Student_Home_Login">Student Information</a></li>
+							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
+							<li><a href="/Admin_BroadCasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
