--- a/views/Admin_Home.ejs
+++ b/views/Admin_Home.ejs
@@ -16,6 +16,7 @@
 				<div>
 					<div>
 						<ul>
+							<li><a href="/Admin_Home">Home</a></li>
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
 							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
 							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
