--- a/views/Student_Grade_Tracking.ejs
+++ b/views/Student_Grade_Tracking.ejs
@@ -19,16 +19,15 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="personal_info.html">Personal Details</a></li>
-							<li><a href="Student_Report.html">Course Reports</a></li>
-							<li><a href="grade_tracking.html">Grade Tracking</a></li>
-							<li><a href="Transcript.html">Transcript</a></li>
-							<li><a href="Attendence.html">Attendence</a></li>
-							<li><a href="receipt.html">Fees Receipts</a></li>
-							<li><a href="Feedback.html">Feedbacks</a></li>
-							<li><a href="select_subj.html">Resources</a></li>
-							<li><a href="Broadcast.html">Broadcasts</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
+							<li><a href="/Student_Home">Home</a></li>
+                            <li><a href="/Student_Info">Personal Details</a></li>
+							<li><a href="/Student_Report">Course Reports</a></li>
+							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+							<li><a href="/Student_Attedance">Attendence</a></li>
+							<li><a href="/Student_Feedback">Feedbacks</a></li>
+							<li><a href="/Student_Resources">Resources</a></li>
+							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
+							<!-- <li><a href="/MainLander">Log Out</a></li> -->
 						</ul>
 					</div>
 				</div>
