--- a/views/Faculty_Info.ejs
+++ b/views/Faculty_Info.ejs
@@ -87,5 +87,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="changepass">
+			<form action="/Faculty_Info" method="post">
+			<input type="password" name="password" placeholder="Password" required="" id="changepassfield">
+			<button type="submit" id ="passchangebutton">Change Password</button>
+			</form>
+		</div>
 	</body>
 </html>
