--- a/views/Student_Info.ejs
+++ b/views/Student_Info.ejs
@@ -88,5 +88,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="changepass">
+			<form action="/Student_Info" method="post">
+			<input type="password" name="password" placeholder="Password" required="" id="changepassfield">
+			<button type="submit" id ="passchangebutton">Change Password</button>
+			</form>
+		</div>
   </body>
 </html>
