--- a/public/css/Student_Info.css
+++ b/public/css/Student_Info.css
@@ -292,3 +292,25 @@
     padding: 5px 10px;
     color: #000;
 }
+
+.changepass{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin-top: 10vh;
+}
+
+#changepassfield{
+  width: 10vw;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
+#passchangebutton{
+  width: 10vw;
+  background-color: white;
+  color: black;
+}
