--- a/views/Forgot_Pswd.ejs
+++ b/views/Forgot_Pswd.ejs
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Faculty Login</title>
+	<title>Forgot Pswd</title>
 	<link rel="stylesheet" type="text/css" href="/css/Faculty_Login_Style.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
-
-
 			<div class="login">
-				<form action="/Faculty_Login" method="post">
+				<form action="/Forgot_Pswd" method="post">
 					<label for="chk" aria-hidden="true">Login</label>
 					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="password" placeholder="Password" required="">
-					<button type="submit">Login</button> 
-				</form>
-				<form action="/Faculty_Forgot_Pswd" method="get">
-					<button type="submit" id ="passchangebutton">Forgot Password</button>
+					<button type="submit">ReSend Password </button> 
 				</form>
 			</div>
-
-
-			
 	</div>
-	<% if(messages.error){ %>
-		<%=messages.error %>
-		<% } %>
 </body>
 </html>
