--- a/views/Student_Home_Login.ejs
+++ b/views/Student_Home_Login.ejs
@@ -17,6 +17,9 @@
 					<input type="password" name="password" placeholder="Password" required="">
 					<button type="submit">Login</button> 
 				</form>
+				<form action="/Forgot_Pswd" method="get">
+					<button type="submit" id ="passchangebutton">Forgot Password</button>
+				</form>
 			</div>
 			<div class="signup" >
 				<form action="/Student_Home_Login" method="post">
@@ -28,8 +31,9 @@
 					<button type="submit">Sign Up</button>
 				</form>
 			</div>
-			
 	</div>
+	
+	
 	<% if(messages.error){ %>
 		<%=messages.error %>
 		<% } %>
