--- a/views/Admin_Home.ejs
+++ b/views/Admin_Home.ejs
@@ -33,5 +33,9 @@
 				<h1>Welcome to Academic Affairs System</h1>
 			</div>
 		</header>
+		
+		<form action="/logoutFaculty" method="post">
+			<button type="submit"> Logout </button>
+		</form>
 	</body>
 </html>
