--- a/views/Faculty_Sub_Info.ejs
+++ b/views/Faculty_Sub_Info.ejs
@@ -40,7 +40,9 @@
 					
 					<%}%>
 				</select>
-				<button type="submit">Find Course Report</a></button>
+				<div style="display: flex; justify-content: center; margin-top: 20px;">
+					<button type="submit" style="background-color: white; color: black; border: none; border-radius: 10px;">Find Course Report</a></button>
+				</div>
 			</form>
 			</div>
 		</div>
