--- a/public/css/Admin_Login.css
+++ b/public/css/Admin_Login.css
@@ -6,7 +6,7 @@ body{
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background:  rgba(13, 110, 139, 0.75);
+	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 .main{
 	width: 350px;
@@ -17,6 +17,18 @@ body{
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
 }
+#chk{
+	display: none;
+}
+.signup{
+	
+
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
 label{
 	color: #fff;
 	font-size: 2.3em;
@@ -26,12 +38,11 @@ label{
 	font-weight: bold;
 	cursor: pointer;
 	transition: .5s ease-in-out;
-	margin-bottom: -10px;
 }
 input{
 	width: 60%;
 	height: 20px;
-	background: #ffffff;
+	background: #e0dede;
 	justify-content: center;
 	display: flex;
 	margin: 20px auto;
@@ -46,8 +57,8 @@ button{
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
-	color: rgba(13, 110, 139, 0.75);
-	background: #ffffff;
+	color: #fff;
+	background: #573b8a;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -57,11 +68,25 @@ button{
 	transition: .2s ease-in;
 	cursor: pointer;
 }
-
-.home-btn{
-	margin-top: 2rem;
+button:hover{
+	background: #6d44b8;
 }
-a {
-	text-decoration: none;
-	color: rgba(13, 110, 139, 0.75);
+.login{
+	position: relative;
+	width:100%;
+	height: 100%;
+}
+.signup label{
+	color: #573b8a;
+	transform: scale(.6);
+}
+
+#chk:checked ~ .signup{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .signup label{
+	transform: scale(1);	
+}
+#chk:checked ~ .login label{
+	transform: scale(.6);
 }
