--- a/views/Admin_BroadCasts.ejs
+++ b/views/Admin_BroadCasts.ejs
@@ -5,6 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/Admin_Broadcast.css" />
 		<title>Admin Broadcasts</title>
 	</head>
@@ -28,39 +29,44 @@
 
 		<div class="container">
 			<div class="title">Broadcasts</div>
-			<div class="course-table">
-				<table>
-					<th style="width: 70%">Broadcasts</th>
-					<th>Date of Broadcast</th>
-					<th>Time of Broadcast</th>
-					<% broadcast.forEach(function(broadcast) { %>
-						<tr></tr>
-					<td>
-						<%= broadcast.broadcasts %>
-					</td>
-					<% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
-                    <td><%= broadcast.date_Of_Broadcast.toLocaleDateString("en-US", options) %></td>
-					<td><%= broadcast.time_Of_Broadcast.toLocaleString('en-US', { hour: 'numeric', hour12: true }) %></td>
-					<tr></tr>
+			<div class="course-table" style="color: black;">
+				<table class="table table-striped" style="border: 2px solid black;">
+			<tr class="table-warning">
+				<th style="width: 70%; padding-top: 27px; border: 2px solid black;">Broadcasts</th>
+				<th style="border: 2px solid black;">Date of Broadcast</th>
+				<th style="border: 2px solid black;">Time of Broadcast</th>
+			</tr>
+			<% broadcast.forEach(function(broadcast) { %>
+			<tr class="table-success">
+			<td style="border: 2px solid black;">
+				<%= broadcast.broadcasts %>
+			</td>
+			<% var options={ weekday: 'long' , year: 'numeric' , month: 'long' , day: 'numeric' }; %>
+				<td style="border: 2px solid black;"><%= broadcast.date_Of_Broadcast.toLocaleDateString("en-US", options) %></td>
+				<td style="border: 2px solid black;"><%= broadcast.time_Of_Broadcast.toLocaleString('en-US', { hour: 'numeric', hour12: true }) %></td>
+			</tr>
 				<%  }) %>
-				<tr></tr>
-				<form action="/Admin_Broadcasts" method="post">
-					<td>
-                        <div class="Broadcast_Text">
-						<input
-							id="Broadcast"
-							name="Broadcast"
-							placeholder="Enter your Broadcast"
-						></input>
-                        </div>
-					</td>
-					<td colspan="2">
-						
-						<button type="submit">Broadcast</button></a>
-					</td>
-				</form>
-				</table>
-			</div>
-		</div>
-	</body>
+		<tr class="table-success">
+			<form action="/Admin_Broadcasts" method="post">
+				<td style="border: 2px solid black;"
+				>
+					<div class="Broadcast_Text">
+					<input
+						id="Broadcast"
+						name="Broadcast"
+						placeholder="Enter your Broadcast"
+					></input>
+					</div>
+				</td>
+				<td style= "border: 2px solid black;" colspan="2">
+					
+					<button type="submit">Broadcast</button></a>
+				</td>
+			</form>
+		</tr>
+		</table>
+	</div>
+</div>
+</body>
 </html>
+
