--- a/views/Admin_Faculty_Info.ejs
+++ b/views/Admin_Faculty_Info.ejs
@@ -5,6 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/Admin_Faculty_Info.css" />
 		<title>Faculty Info</title>
 	</head>
@@ -28,16 +29,26 @@
 
         <div class="container">
             <div class="title">Faculty Information</div>
-            <div class="course-table">
-              <table>
-                <% faculty.forEach(function(faculty) { %>
-                  <tr></tr>
-                  <td><%= faculty.name %></td>
-                  <td><%= faculty.faculty_ID%>  </td>
-                  <% }) %>
-              </table>
-            </div>
-          </div>
-
-	</body>
-</html>
+            <div class="course-table" style="color: black;">
+				<table class="table table-striped" style="border: 2px solid black;">
+				  <thead >
+					  <tr class="table-warning" >
+						  <th scope="col" style="border: 2px solid black;">Name</th>
+						  <th scope="col" style="border: 2px solid black;">ID</th>
+					  </tr>
+				  </thead>
+				  <tbody>
+				  <% faculty.forEach(function(faculty) { %>
+					<tr class="table-success">
+					  <td style="border: 2px solid black;"><%= faculty.name %></td>
+					  <td style="border: 2px solid black;"><%= faculty.faculty_ID%>  </td>
+					  </tr>
+					<% }) %>
+				  </tbody>
+				</table>
+			  </div>
+			</div>
+  
+	  </body>
+  </html>
+  
