--- a/views/Admin_Feedback_Details.ejs
+++ b/views/Admin_Feedback_Details.ejs
@@ -5,6 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/Admin_Feedback_Details.css" />
 		<title>Admin Home</title>
 	</head>
@@ -28,15 +29,15 @@
 		</div>
 
 		<div class="container">
-            <div class="title">Feedback</div>
-            <div class="course-table">
+            <div class="title"> Feedback</div>
+            <div class="course-table"  style="color: black;">
 				
-              <table>
-				<th> <%=course.name%> </th>
+              <table style="width: 80%; margin-left: 10%;" class= "table table-striped" style="border: 2px solid black;">
+				<th class="table-warning" style="border: 2px solid black;"> <%=course.name%> </th>
                 <% for(var i=0;i<StuSub.length;i++) {%>
             
-                  <tr>
-                    <td> <%= StuSub[i].feedback %></td>
+                  <tr class="table-success">
+                    <td style="border: 2px solid black;"> <%= StuSub[i].feedback %></td>
                   </tr>
                 <% } %>
               </table>
