--- a/views/Admin_Student_Info.ejs
+++ b/views/Admin_Student_Info.ejs
@@ -5,6 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/Admin_Student_Info.css" />
 		<title>Student Info</title>
 	</head>
@@ -29,13 +30,19 @@
 
         <div class="container">
             <div class="title">Student-Info</div>
-            <div class="course-table">
-              <table>
+            <div class="course-table" style="color: black;">
+				<table class="table table-striped" style="border: 2px solid black;">
+				  <thead >
+					  <tr class="table-warning" >
+						  <th scope="col" style="border: 2px solid black;">Name</th>
+						  <th scope="col" style="border: 2px solid black;">ID</th>
+					  </tr>
                 <% student.forEach(function(student) { %>
-                <tr></tr>
-                <td><%= student.name %></td>
-                <td><%= student.student_ID%>  </td>
-                <% }) %>
+                <tr class="table-success">
+					<td style="border: 2px solid black;"><%= student.name %></td>
+					<td style="border: 2px solid black;"><%= student.student_ID%>  </td>
+				</tr>
+				<% }) %>
               </table>
             </div>
           </div>
