--- a/views/Faculty_Resources.ejs
+++ b/views/Faculty_Resources.ejs
@@ -5,6 +5,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/Faculty_Resources.css" />
 		<title>Faculty Resources</title>
 	</head>
@@ -29,16 +30,17 @@
 		</div>
         <div class="container">
             <div class="title">Subject</div>
-            <div class="course-table">
-              <table>
-                <th>Title</th>
-                <th>Link</th>
-                <tr></tr>
-                <% for (var i=0; i<faculty.length; i++) { %>
-                 <td>Reference Material for <%= faculty[i].course_Name.name %> </td>
-                 <td><a href="<%= faculty[i].fac_Course_Link%>" target="_blank"><button>Download</button></a></td>
-
-                <tr></tr>
+			<div class="course-table" style="color: black;">
+				<table class="table table-striped" style="border: 2px solid black;">
+				  <tr class="table-warning" >
+				  <th style="border: 2px solid black;">Title</th>
+				  <th style="border: 2px solid black;">Link</th>
+				  </tr>
+				  <% for (var i=0; i<faculty.length; i++) { %>
+				  <tr class="table-success">
+					  <td style="border: 2px solid black;">Reference Material for <%= faculty[i].course_Name.name %> </td>
+					  <td style="border: 2px solid black;"><a href="<%= faculty[i].fac_Course_Link%>" target="_blank"><button style= "color: blue;">Download</button></a></td>
+				  </tr>
                 <%}%>   
               </table>
             </div>
