Fixed Routing for all the pages

--- a/views/Admin_Faculty_Info.ejs
+++ b/views/Admin_Faculty_Info.ejs
@@ -18,9 +18,11 @@
 					<div>
 						<ul>
 							<li><a href="/Admin_Home">Home</a></li>
-							<li><a href="/Admin_Student_Home_Login">Student Information</a></li>
+							<li><a href="/Admin_Student_Info">Student Information</a></li>
 							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
-							<li><a href="/Admin_BroadCasts">Broadcasts</a></li>
+							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
+							<li><a href="/Admin_Feedback">Feedback</a></li>
+							
 						</ul>
 					</div>
 				</div>
