--- a/views/Admin_Student_Info.ejs
+++ b/views/Admin_Student_Info.ejs
@@ -21,13 +21,13 @@
 							<li><a href="/Admin_Student_Info">Student Information</a></li>
 							<li><a href="/Admin_Faculty_Info">Faculty Information</a></li>
 							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
+							<li><a href="/Admin_Feedback">Feedback</a></li>
 							
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
         <div class="container">
             <div class="title">Student-Info</div>
             <div class="course-table" style="color: black;">
