--- a/views/Faculty_Broadcasts.ejs
+++ b/views/Faculty_Broadcasts.ejs
@@ -18,10 +18,10 @@
 					<div>
 						<ul>
 							<li><a href="/Faculty_Home">Home</a></li>
-							<li><a href="/Admin_Student_Info">Student Information</a></li>
-							<li><a href="/Faculty_Info">Faculty Information</a></li>
+							<li><a href="/Faculty_Info">Faculty Details</a></li>
+							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
+							<li><a href="/Faculty_Resources">Maintain course info</a></li>
 							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
-							<!-- <li><a href="/MainLander">Log Out</a></li> -->
 						</ul>
 					</div>
 				</div>
