--- a/views/Student_Broadcasts.ejs
+++ b/views/Student_Broadcasts.ejs
@@ -17,10 +17,15 @@
 					<div>
 						<ul>
 							<li><a href="/Student_Home">Home</a></li>
-							<li><a href="/Student_Info">Student Information</a></li>
-							<li><a href="/Faculty_Info">Faculty Information</a></li>
-							<li><a href="/Admin_Broadcasts">Broadcasts</a></li>
-							<!-- <li><a href="/MainLander">Log Out</a></li> -->
+							<li><a href="/Student_Info">Student Details</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
+							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
+							<li><a href="/Student_Feedback">Feedbacks</a></li>
+							<li><a href="/Student_Resources">Resources</a></li>
+							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
