--- a/views/Student_Grade_Tracking.ejs
+++ b/views/Student_Grade_Tracking.ejs
@@ -20,14 +20,15 @@
 					<div>
 						<ul>
 							<li><a href="/Student_Home">Home</a></li>
-                            <li><a href="/Student_Info">Personal Details</a></li>
-							<li><a href="/Student_Report">Course Reports</a></li>
+							<li><a href="/Student_Info">Student Details</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
 							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
-							<li><a href="/Student_Attedance">Attendence</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
 							<li><a href="/Student_Feedback">Feedbacks</a></li>
 							<li><a href="/Student_Resources">Resources</a></li>
 							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
-							<!-- <li><a href="/MainLander">Log Out</a></li> -->
 						</ul>
 					</div>
 				</div>
