--- a/views/Student_Info.ejs
+++ b/views/Student_Info.ejs
@@ -13,27 +13,28 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler" />
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
-          <div>
-            <ul>
-				<li><a href="/Student_Home">Home</a></li>
-              	<li><a href="/Student_Info">Personal Details</a></li>
-							<li><a href="/Student_Report">Course Reports</a></li>
-							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
-							<li><a href="/Student_Attendence">Attendence</a></li>
-							<li><a href="/Student_Feedback">Feedbacks</a></li>
-							<li><a href="/Student_Resources">Resources</a></li>
-							<li><a href="/StudentBroadcast">Broadcasts</a></li>
-		    <!-- <li><a href="/MainLander">Log Out</a></li> -->
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+	<div class="menu-wrap">
+		<input type="checkbox" class="toggler" />
+		<div class="hamburger"><div></div></div>
+		<div class="menu">
+			<div>
+				<div>
+					<ul>
+						<li><a href="/Student_Home">Home</a></li>
+						<li><a href="/Student_Info">Student Details</a></li>
+						<li><a href="/Student_Sub_Info">Course Reports</a></li>
+						<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+						
+						<li><a href="/Student_Attendance">Attendence</a></li>
+						
+						<li><a href="/Student_Feedback">Feedbacks</a></li>
+						<li><a href="/Student_Resources">Resources</a></li>
+						<li><a href="/Student_Broadcasts">Broadcasts</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
     <div class="student-profile py-4">
 			<div class="container">
 				<div class="row">
