--- a/views/Student_Resources.ejs
+++ b/views/Student_Resources.ejs
@@ -13,25 +13,27 @@
   </head>
   <body>
     <div class="menu-wrap">
-      <input type="checkbox" class="toggler" />
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
-          <div>
-            <ul>
-              <li><a href="/Student_Home">Home</a></li>
-              <li><a href="/Student_Info">Personal Details</a></li>
-							<li><a href="/Student_Report">Course Reports</a></li>
+			<input type="checkbox" class="toggler" />
+			<div class="hamburger"><div></div></div>
+			<div class="menu">
+				<div>
+					<div>
+						<ul>
+							<li><a href="/Student_Home">Home</a></li>
+							<li><a href="/Student_Info">Student Details</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
 							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
-							<li><a href="/Attendence">Attendence</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
 							<li><a href="/Student_Feedback">Feedbacks</a></li>
 							<li><a href="/Student_Resources">Resources</a></li>
-							<li><a href="/Student_Broadcast">Broadcasts</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
     <div class="container">
       <div class="title">Subject</div>
       <div class="course-table">
