--- a/views/Student_Sub_Info.ejs
+++ b/views/Student_Sub_Info.ejs
@@ -16,12 +16,16 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="/Faculty_Info">Faculty Details</a></li>
-							<li><a href="/Faculty_Sub_Info">Course Reports</a></li>
-							<li><a href="/Faculty_Resources">Maintain course info</a></li>
-							<li><a href="/Faculty_Broadcasts">Broadcasts</a></li>
+							<li><a href="/Student_Home">Home</a></li>
+							<li><a href="/Student_Info">Student Details</a></li>
+							<li><a href="/Student_Sub_Info">Course Reports</a></li>
+							<li><a href="/Student_Grade_Tracking">Grade Tracking</a></li>
+							
+							<li><a href="/Student_Attendance">Attendence</a></li>
+							
 							<li><a href="/Student_Feedback">Feedbacks</a></li>
-							<li><a href="/MainLander">Log Out</a></li>
+							<li><a href="/Student_Resources">Resources</a></li>
+							<li><a href="/Student_Broadcasts">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
